--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ artifacts/
 *.svclog
 *.scc
 *.pyd
+*.pyc
 
 # Chutzpah Test files
 _Chutzpah*
@@ -244,3 +245,4 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/.vscode/launch.json
